2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	#define __attribute __declspec for vc++.
	* cli.hh: Put __attribute__ at the beginning of declaration.
	* compiler.hh: define __attribute__ __declspec for vc++.
	* sysexits.cc: Revert my previous patch returning value in noreturn
	  func.
	* sysexits.hh: Put __attribute__ at the beginning of declaration.

2007-12-18  Akim Demaille  <demaille@gostai.com>

	make_tokenizer.
	* tokenizer.hh, tokenizer.cc: New.
	* Makefile.am, libport-sources.mk: Adjust.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	Fix missing return value.
	* sysexits.cc: Here.

2007-12-17  Akim Demaille  <demaille@gostai.com>

	libport::exit.
	* cli.cc: Use it.
	* libport-sources.mk: Adjust.
	* sysexits.hh, sysexits.cc (libport::exit): New.

2007-12-17  Akim Demaille  <demaille@gostai.com>

	program_name.
	* program-name.hh, program-name.cc: New.
	* Makefile.am, cli.cc, libport-sources.mk: Adjust.
	* sysexits.hh: No longer try to use sysexits.h.
	Add our own EX_SKIP and EX_HARD.

2007-12-14  Akim Demaille  <demaille@gostai.com>

	Fix Doxumentation.
	* sysexits.hh: here.

2007-12-14  Akim Demaille  <demaille@gostai.com>

	cli.
	* cli.cc, cli.hh, cli.hxx: New.
	* Makefile.am, libport-sources.mk: Adjust.

2007-12-14  Akim Demaille  <demaille@gostai.com>

	Prefer enums to #define.
	* sysexits.hh: here.

2007-11-09  Akim Demaille  <demaille@gostai.com>

	Fix cpp guard.
	* sysexits.hh: here.

2007-11-09  Akim Demaille  <demaille@gostai.com>

	Install sysexits.hh.
	* Makefile.am: here.

2007-11-09  Akim Demaille  <demaille@gostai.com>

	libport/sysexits.h.
	* assert.hh: Space changes.
	* sysexits.hh: New.
	* unistd.h: Use LIBPORT_HAVE_*.

2007-10-30  Akim Demaille  <demaille@gostai.com>

	Fix package-info.
	* package-info.hh, package-info.cc (dump): Provide a default
	argument for sake of gdb.
	Fix the uses of "first".
	Fix output.
	(signature): New.
	Support Copyright stuff.

2007-10-30  Akim Demaille  <demaille@gostai.com>

	Cannot -- on bool.