@@ -1,5 +1,12 @@
 2007-12-18  Matthieu Nottale  <nottale@gostai.com>
 
+	Replace __noreturn__ with noreturn.
+	* cli.hh: __noreturn__->noreturn.
+	* contract.hh: Remove duplicate __attribute__ handling code, include
+	    compiler.hh.
+
+2007-12-18  Matthieu Nottale  <nottale@gostai.com>
+
 	#define __attribute __declspec for vc++.
 	* cli.hh: Put __attribute__ at the beginning of declaration.
 	* compiler.hh: define __attribute__ __declspec for vc++.
